// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should be disabled 1`] = `
<button
  className="AknButton AknButton--disabled"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  content
</button>
`;

exports[`Button should display a counter 1`] = `
<button
  className="AknButton"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  content
  <span
    className="AknButton--withSuffix"
  >
    9
  </span>
</button>
`;

exports[`Button should have custom classes 1`] = `
<button
  className="class1 class2 AknButton"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  content
</button>
`;

exports[`Button should render 1`] = `
<button
  className="AknButton"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  content
</button>
`;
